--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "socket.io": "^4.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
